fixed svg spacing

--- a/main.css
+++ b/main.css
@@ -156,23 +156,29 @@ span {
 
 /* Sections */
 #home {
-  display: none;
-  height: 1000px;
+  display: flex;
+  align-items: center;
+  padding: 300px 0;
 }
 
 #projects {
-  max-height: 3000px;
+  background-color: rebeccapurple;
 }
 
 #skills {
-  display: none;
+  /* display: none; */
+}
+
+#contact {
+  margin-top: 100px;
 }
 
 .centerItems {
-  margin-top: 125px;
   display: flex;
   justify-content: space-between; /* horizontal zentrieren */
   gap: 50px;
+  width: 80%;
+  margin: 50px auto 0 auto;
   /* flex-wrap: wrap; */
 }
 
@@ -397,18 +403,14 @@ input[type="checkbox"] {
 } */
 
 /*About Me*/
-#hexagonImage {
+/* #hexagonImage {
   margin-top: 400px;
-}
+} */
 
 #aboutMeContainer {
   width: 50%;
   height: 200px;
   background: var(--AppleLightYellow);
-  position: relative;
-  bottom: 470px;
-  margin-top: 160px;
-  margin-left: 400px;
   border-radius: 20px;
   padding: 15px;
   display: flex;
@@ -426,7 +428,6 @@ input[type="checkbox"] {
 
 #projectsContainer {
   height: 200px;
-  padding-top: 5px;
   /*background-color: rgba(0, 0, 0, .4);
   -webkit-backdrop-filter: blur(7.5px);
   backdrop-filter: blur(7.5px);*/
@@ -443,46 +444,41 @@ input[type="checkbox"] {
 }
 
 #journeyContinuesContainer {
-  width: 100%;
   height: 275px;
-  position: absolute;
-  top: 1240px;
-  left: 0px;
   background-color: var(--colorTransparent);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   box-shadow: 0px 0px 15px 15px var(--colorTransparent);
+  z-index: 10;
+  position: initial;
 }
 
 #flexboxContainer {
   width: 80%;
   height: 175px;
-  /* background: green; */
-  position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding: 30px 600px 50px 0px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-content: flex-end;
+  justify-content: center;
 }
 
 #skillsContainer {
+  position: sticky;
+  margin-top: -125px;
   width: 80%;
   height: 200px;
   background: var(--colorContainer);
-  position: relative;
-  top: 0px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 10px;
   text-align: center;
   padding: 30px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-content: center;
+  align-content: center; */
+  z-index: 100;
 }
 
 /* #musicContainer {
@@ -636,7 +632,7 @@ input[type="checkbox"] {
 
 #svgTimeline {
   display: block;
-  background-color: blue;
+  background-color: green;
 }
 
 /* Animate Timeline */
@@ -710,8 +706,9 @@ input[type="checkbox"] {
 }
 
 .items {
-  position: relative;
-  bottom: 2715px;
+  position: absolute;
+  top: 1500px;
+  left: 240px;
   padding: 0;
   width: 100%;
   margin-top: 20px;
